--- a/agile-frontend/WebContent/misc/emailbuilder/templates/layout7/body_index.html
+++ b/agile-frontend/WebContent/misc/emailbuilder/templates/layout7/body_index.html
@@ -41,7 +41,7 @@
 <tr>
 <td class="gap" width="30"></td>
 <td width="160">
-<a target="_blank" class="imgLink" href="www.agilecrm.com"><img id="731f69df-3f39-adfa-2b78-f3575655f5f6" src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/template/4/hero1.jpg" style="display: block;margin: 0px;max-width: 540px;" align="left" height="210px" border="0" width="250px"></a>
+<a target="_blank" class="imgLink" href="www.agilecrm.com"><img id="731f69df-3f39-adfa-2b78-f3575655f5f6" src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/template/4/hero1.jpg" style="display: block;margin: 0px;max-width: 540px;padding:10px;" align="left" height="210px" border="0" width="250px"></a>
 </td>
 </tr>
 <tr>
