--- a/agile-frontend/WebContent/misc/formbuilder/formbuilder-topmenu.css
+++ b/agile-frontend/WebContent/misc/formbuilder/formbuilder-topmenu.css
@@ -103,70 +103,81 @@ border-radius: 0px;font-size: 15px;
     outline: 0;
     padding-right: 25px!important;
 }
- .modal-content{
-          position: relative;
-          border: 1px solid rgba(0,0,0,.2);
-          border-radius: 0;
-          outline: 0;
-          box-shadow: 0 3px 9px rgba(0,0,0,.5);
-      }
+.modal-content{
+    position: relative;
+    border: 1px solid rgba(0,0,0,.2);
+    border-radius: 0;
+    outline: 0;
+    box-shadow: 0 3px 9px rgba(0,0,0,.5);
+}
+.modal-header .close{
+     opacity: .2;
+     outline:none;
+}
+.modal-title{
+    font-weight: normal;
+    margin: 0;
+    font-size: 16px;
+    line-height: 1.42857143;
+    color: #58666e;
+}
+.modal-body{
+    background: #fff;
+    position: relative;
+    padding: 15px;
+}
+.modal-footer{
+    padding: 10px;
+    background-color: rgba(0,0,0,0.025);
+    text-align: right;
+    border-top: 1px solid #e5e5e5;
+}
+.modal-footer .checkbox{
+    margin-top: 4px;
+    margin-bottom: 4px;
+    position: relative;
+    display: block;
+}
+.modal-footer .checkbox label{
+    min-height: 20px;
+    padding-left: 20px;
+    margin-bottom: 0;
+    font-weight: normal;
+    cursor: pointer;
+    float: left!important;
+    display: inline-block;
+    max-width: 100%;
+    font-family: "Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 13px;
+    -webkit-font-smoothing: antialiased;
+    line-height: 1.69;
+    color: #58666e;
+}
+.close-button{
+    outline:none;
+    color: #fff!important;
+    background-color: #7266ba;
+    border-color: #7266ba;
+    border-radius: 2px;
+    outline: 0!important;
+    padding: 4px 9px;
+    font-size: 12px;
+    line-height: 1.7;
+    border: 1px solid transparent;
+}
+#form-copy-dropdown{
+    display: none;
+    padding: 5px;
+    border-radius: 0;
+    padding-top: 17px;
+}
+#form-copy-dropdown:hover,#form-copy-dropdown:active {
+    background-color: #6254b2!important;
+    border-color: #6254b2!important;
+}
+.dropdown-menu>li>a:hover,.dropdown-menu>li>a:focus{
+    color: #141719;
+    background-color: #f5f5f5;
 
-      .modal-header .close{
-         opacity: .2;
-         outline:none;
-      }
-      .modal-title{
-          font-weight: normal;
-          margin: 0;
-          font-size: 16px;
-          line-height: 1.42857143;
-          color: #58666e;
-      }
-      .modal-body{
-          background: #fff;
-          position: relative;
-          padding: 15px;
-      }
-      .modal-footer{
-          padding: 10px;
-          background-color: rgba(0,0,0,0.025);
-
-
-          text-align: right;
-          border-top: 1px solid #e5e5e5;
-      }
-      .modal-footer .checkbox{
-          margin-top: 4px;
-          margin-bottom: 4px;
-          position: relative;
-          display: block;
-      }
-      .modal-footer .checkbox label{
-            min-height: 20px;
-          padding-left: 20px;
-          margin-bottom: 0;
-          font-weight: normal;
-          cursor: pointer;
-          float: left!important;
-          display: inline-block;
-          max-width: 100%;
-          font-family: "Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif;
-          font-size: 13px;
-          -webkit-font-smoothing: antialiased;
-          line-height: 1.69;
-          color: #58666e;
-      }
-      .close-button{
-          outline:none;
-          color: #fff!important;
-          background-color: #7266ba;
-          border-color: #7266ba;
-          border-radius: 2px;
-          outline: 0!important;
-          padding: 4px 9px;
-          font-size: 12px;
-          line-height: 1.7;
-          border: 1px solid transparent;
-      }
-
+}
 
