max-width issue fixed for all default templates

--- a/agile-frontend/WebContent/misc/emailbuilder/templates/layout10/body_index.html
+++ b/agile-frontend/WebContent/misc/emailbuilder/templates/layout10/body_index.html
@@ -16,7 +16,7 @@
 <tbody>
 <tr>
 <td align="center" style="padding: 15px 0px;" class="image">
-<img class="" border="0" align="one_image" style="display:block;max-width:640px" alt="" src="https://agilecrm.s3.amazonaws.com/editor/email/null/black_friday_png_1476852118375.png" tabindex="0" id="f6d87a21-b8db-d438-a939-e4f6f2b14a18" width="600" height="320">
+<img data-maxwidth="520" class="" border="0" align="one_image" style="display:block;max-width:520px" alt="" src="https://agilecrm.s3.amazonaws.com/editor/email/null/black_friday_png_1476852118375.png" tabindex="0" id="f6d87a21-b8db-d438-a939-e4f6f2b14a18" width="600" height="320">
 </td>
 </tr>
 </tbody>
@@ -143,7 +143,7 @@
 </tr>
 <tr>
 <td align="left" class="image-caption-content image imageInColumn" >
-<img src="https://agilecrm.s3.amazonaws.com/editor/email/null/black_friday_jpg_1476940722531__1__jpg_1477026150721.jpg" alt="" style="display: block; border: none;" height="236" align="2" border="0" width="236" id="fcdc3363-c562-6984-3e91-af156ea7623f" class="">
+<img data-maxwidth="340" src="https://agilecrm.s3.amazonaws.com/editor/email/null/black_friday_jpg_1476940722531__1__jpg_1477026150721.jpg" alt="" style="display: block; border: none;max-width:340px;" height="236" align="2" border="0" width="236" id="fcdc3363-c562-6984-3e91-af156ea7623f" class="">
 </td>
 </tr>
 <tr>
@@ -174,7 +174,7 @@
 </tr>
 <tr>
 <td align="left" class="image-caption-content image imageInColumn" >
-<img src="https://agilecrm.s3.amazonaws.com/editor/email/null/black_friday_jpg_1476940722531__1__jpg_1477025644974.jpg" alt="" style="display: block; border: none;" height="238" align="2" border="0" width="238" id="293e6386-30fb-77d0-67d4-f688abbec80c" class="">
+<img data-maxwidth="340" src="https://agilecrm.s3.amazonaws.com/editor/email/null/black_friday_jpg_1476940722531__1__jpg_1477025644974.jpg" alt="" style="display: block; border: none;max-width:340px;" height="238" align="2" border="0" width="238" id="293e6386-30fb-77d0-67d4-f688abbec80c" class="">
 </td>
 </tr>
 <tr>
