--- a/agile-frontend/WebContent/misc/emailbuilder/templates/layout3/body_index.html
+++ b/agile-frontend/WebContent/misc/emailbuilder/templates/layout3/body_index.html
@@ -23,7 +23,7 @@
 <tr>
 <td class="gap" width="30"></td>
 <td width="160">
-<img border="0" align="left" src="https://s3.amazonaws.com/AgileEmailTemplates/responsive/lancer/layout1/blue/img/logo.png" style="display: block;margin: 0px;max-width: 340px" id="a49b3541-d537-b648-3d98-397605a6e123" width="128px" height="30px">
+<img data-maxwidth="340" border="0" align="left" src="https://s3.amazonaws.com/AgileEmailTemplates/responsive/lancer/layout1/blue/img/logo.png" style="display: block;margin: 0px;max-width: 340px" id="a49b3541-d537-b648-3d98-397605a6e123" width="128px" height="30px">
 </td>
 </tr>
 </tbody>
@@ -57,7 +57,7 @@
 <tbody>
 <tr>
 <td align="center" style="padding: 5px 0px 0px;" class="image">
-<img class="" border="0" align="one_image" style="display:block;max-width:540px" alt="" src="https://s3.amazonaws.com/AgileEmailTemplates/responsive/lancer/layout1/blue/img/main-image.png" tabindex="0" id="5882d2b0-bff9-ccf4-fda8-2692c485d9c2" width="540px" height="300px">
+<img data-maxwidth="520" class="" border="0" align="one_image" style="display:block;max-width:520px" alt="" src="https://s3.amazonaws.com/AgileEmailTemplates/responsive/lancer/layout1/blue/img/main-image.png" tabindex="0" id="5882d2b0-bff9-ccf4-fda8-2692c485d9c2" width="520px" height="300px">
 </td>
 </tr>
 </tbody>
@@ -212,7 +212,7 @@
 </tr>
 <tr>
 <td align="center" class="image-caption-content image imageInColumn" >
-<img src="https://s3.amazonaws.com/AgileEmailTemplates/responsive/lancer/layout1/blue/img/feature-img1.png" alt="" style="display: block; border: none;" height="60px" align="2" border="0" width="60px" id="4a8b4739-4500-b998-624b-f149be688311" class="">
+<img data-maxwidth="340" src="https://s3.amazonaws.com/AgileEmailTemplates/responsive/lancer/layout1/blue/img/feature-img1.png" alt="" style="display: block; border: none; max-width:340px;" height="60px" align="2" border="0" width="60px" id="4a8b4739-4500-b998-624b-f149be688311" class="">
 </td>
 </tr>
 <tr>
@@ -242,7 +242,7 @@
 </tr>
 <tr>
 <td align="center" class="image-caption-content image imageInColumn" >
-<img src="https://s3.amazonaws.com/AgileEmailTemplates/responsive/lancer/layout1/blue/img/feature-img2.png" alt="" style="display: block; border: none;" height="60px" align="2" border="0" width="60px" id="2bb009af-0f37-964c-60d7-8fbbfefe2cae" class="">
+<img data-maxwidth="340" src="https://s3.amazonaws.com/AgileEmailTemplates/responsive/lancer/layout1/blue/img/feature-img2.png" alt="" style="display: block; border: none;max-width:340px;" height="60px" align="2" border="0" width="60px" id="2bb009af-0f37-964c-60d7-8fbbfefe2cae" class="">
 </td>
 </tr>
 <tr>
@@ -276,7 +276,7 @@
 </tr>
 <tr>
 <td align="center" class="image-caption-content image imageInColumn" >
-<img src="https://s3.amazonaws.com/AgileEmailTemplates/responsive/lancer/layout1/blue/img/feature-img3.png" alt="" style="display: block; border: none;" height="60px" align="2" border="0" width="60px" id="0cebdb45-1933-023d-ab25-a883695f6f2e" class="">
+<img data-maxwidth="340" src="https://s3.amazonaws.com/AgileEmailTemplates/responsive/lancer/layout1/blue/img/feature-img3.png" alt="" style="display: block; border: none;max-width:340px;" height="60px" align="2" border="0" width="60px" id="0cebdb45-1933-023d-ab25-a883695f6f2e" class="">
 </td>
 </tr>
 <tr>
