--- a/agile-frontend/WebContent/misc/emailbuilder/templates/layout4/body_index.html
+++ b/agile-frontend/WebContent/misc/emailbuilder/templates/layout4/body_index.html
@@ -18,7 +18,7 @@
 <tbody>
 <tr>
 <td align="center" style="padding:15px 50px 15px 50px;" class="image">
-<img class="" border="0" align="one_image" style="display:block;max-width:540px" alt="" src="https://s3.amazonaws.com/AgileEmailTemplates/responsive/lancer/layout1/blue/img/logo.png" tabindex="0" id="490611a0-66d7-ff3b-e9a4-82af41795bf2" width="128px" height="30px">
+<img data-maxwidth="520" class="" border="0" align="one_image" style="display:block;max-width:520px" alt="" src="https://s3.amazonaws.com/AgileEmailTemplates/responsive/lancer/layout1/blue/img/logo.png" tabindex="0" id="490611a0-66d7-ff3b-e9a4-82af41795bf2" width="128px" height="30px">
 </td>
 </tr>
 </tbody>
