--- a/agile-frontend/WebContent/misc/emailbuilder/templates/layout7/body_index.html
+++ b/agile-frontend/WebContent/misc/emailbuilder/templates/layout7/body_index.html
@@ -41,7 +41,7 @@
 <tr>
 <td class="gap" width="30"></td>
 <td width="160">
-<a target="_blank" class="imgLink" href="www.agilecrm.com"><img id="731f69df-3f39-adfa-2b78-f3575655f5f6" src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/template/4/hero1.jpg" style="display: block;margin: 0px;max-width: 540px;padding:10px;" align="left" height="210px" border="0" width="250px"></a>
+<a target="_blank" class="imgLink" href="www.agilecrm.com"><img data-maxwidth="520" id="731f69df-3f39-adfa-2b78-f3575655f5f6" src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/template/4/hero1.jpg" style="display: block;margin: 0px;max-width: 520px;padding:10px;" align="left" height="210px" border="0" width="250px"></a>
 </td>
 </tr>
 <tr>
@@ -104,7 +104,7 @@
 </tr>
 <tr>
 <td class="image-caption-content image imageInColumn" align="center">
-<a target="_blank" class="imgLink" href="www.agilecrm.com"><img class="" id="0565aabb-e33d-1948-eb60-24e877ed9805" src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/template/4/crop5.jpg" alt="" style="display: block; border: none;" align="2" height="150px" border="0" width="200px"></a>
+<a target="_blank" class="imgLink" href="www.agilecrm.com"><img data-maxwidth="340" class="" id="0565aabb-e33d-1948-eb60-24e877ed9805" src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/template/4/crop5.jpg" alt="" style="display: block; border: none; max-width:340px;" align="2" height="150px" border="0" width="200px"></a>
 </td>
 </tr>
 <tr>
@@ -137,7 +137,7 @@
 </tr>
 <tr>
 <td class="image-caption-content image imageInColumn" align="center">
-<a target="_blank" class="imgLink" href="www.agilecrm.com"><img class="" id="efdf04fc-a447-1573-ec22-2264a71f44ca" src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/template/4/crop3.jpg" alt="" style="display: block; border: none;" align="2" height="150px" border="0" width="200px"></a>
+<a target="_blank" class="imgLink" href="www.agilecrm.com"><img data-maxwidth="340" class="" id="efdf04fc-a447-1573-ec22-2264a71f44ca" src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/template/4/crop3.jpg" alt="" style="display: block; border: none; max-width:340px;" align="2" height="150px" border="0" width="200px"></a>
 </td>
 </tr>
 <tr>
@@ -198,7 +198,7 @@
 </tr>
 <tr>
 <td class="image-caption-content image imageInColumn" align="center">
-<a target="_blank" class="imgLink" href="www.agilecrm.com"><img id="86fd0c7c-0ac1-bba0-f42a-91eb61c07c7c" class="" src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/template/4/crop2.jpg" alt="" style="display: block; border: none;" align="2" height="150px" border="0" width="200px"></a>
+<a target="_blank" class="imgLink" href="www.agilecrm.com"><img data-maxwidth="340" id="86fd0c7c-0ac1-bba0-f42a-91eb61c07c7c" class="" src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/template/4/crop2.jpg" alt="" style="display: block; border: none; max-width:340px;" align="2" height="150px" border="0" width="200px"></a>
 </td>
 </tr>
 <tr>
@@ -231,7 +231,7 @@
 </tr>
 <tr>
 <td class="image-caption-content image imageInColumn" align="center">
-<a target="_blank" class="imgLink" href="www.agilecrm.com"><img id="8097c1a7-ae10-1c0f-b086-ac7258f34d5a" class="" src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/template/4/crop3.jpg" alt="" style="display: block; border: none;" align="2" height="150px" border="0" width="200px"></a>
+<a target="_blank" class="imgLink" href="www.agilecrm.com"><img  data-maxwidth="340" id="8097c1a7-ae10-1c0f-b086-ac7258f34d5a" class="" src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/template/4/crop3.jpg" alt="" style="display: block; border: none; max-width:340px;" align="2" height="150px" border="0" width="200px"></a>
 </td>
 </tr>
 <tr>
