--- a/agile-frontend/WebContent/misc/emailbuilder/templates/layout8/body_index.html
+++ b/agile-frontend/WebContent/misc/emailbuilder/templates/layout8/body_index.html
@@ -16,7 +16,7 @@
 <tbody>
 <tr>
 <td align="center" style="padding: 15px 0px;" class="image">
-<img class="" border="0" align="one_image" style="display:block;max-width:640px" alt="" src="https://agilecrm.s3.amazonaws.com/editor/email/null/holiday_png_1476853834066.png" tabindex="0" id="4a323cfb-7cab-9ae4-d2ec-f85285995cc3" width="600" height="310">
+<img data-maxwidth="520" class="" border="0" align="one_image" style="display:block;max-width:520px" alt="" src="https://agilecrm.s3.amazonaws.com/editor/email/null/holiday_png_1476853834066.png" tabindex="0" id="4a323cfb-7cab-9ae4-d2ec-f85285995cc3" width="600" height="310">
 </td>
 </tr>
 </tbody>
