--- a/agile-frontend/WebContent/misc/emailbuilder/templates/layout9/body_index.html
+++ b/agile-frontend/WebContent/misc/emailbuilder/templates/layout9/body_index.html
@@ -17,7 +17,7 @@
 <tbody>
 <tr>
 <td align="center" style="padding: 0px 0px 15px;" class="image">
-<img class="" border="0" align="one_image" style="display:block;max-width:640px" alt="" src="https://agilecrm.s3.amazonaws.com/editor/email/null/top_border_png_1476856081268.png" tabindex="0" id="7024e737-8309-a09e-50b6-533b8df267d5" width="630" height="134">
+<img data-maxwidth="520" class="" border="0" align="one_image" style="display:block;max-width:520px" alt="" src="https://agilecrm.s3.amazonaws.com/editor/email/null/top_border_png_1476856081268.png" tabindex="0" id="7024e737-8309-a09e-50b6-533b8df267d5" width="630" height="134">
 </td>
 </tr>
 </tbody>
@@ -57,7 +57,7 @@
 <tbody>
 <tr>
 <td align="center" style="padding: 15px 0px;" class="image">
-<img class="" border="0" align="one_image" style="display:block;max-width:640px" alt="" src="https://agilecrm.s3.amazonaws.com/editor/email/null/christamas_png_1476856156195.png" tabindex="0" id="799a1712-5cb4-a5a4-7759-0b1cd97a206f" width="630" height="310">
+<img data-maxwidth="520" class="" border="0" align="one_image" style="display:block;max-width:520px" alt="" src="https://agilecrm.s3.amazonaws.com/editor/email/null/christamas_png_1476856156195.png" tabindex="0" id="799a1712-5cb4-a5a4-7759-0b1cd97a206f" width="630" height="310">
 </td>
 </tr>
 </tbody>
@@ -99,7 +99,7 @@
 <tbody>
 <tr>
 <td align="center" style="padding: 15px 0px;" class="image">
-<img class="" border="0" align="one_image" style="display:block;max-width:640px" alt="" src="https://agilecrm.s3.amazonaws.com/editor/email/null/bottom_border_png_1476857064261.png" tabindex="0" id="dcdafd24-d96d-1fce-4f2b-759af3851978" width="630" height="210">
+<img data-maxwidth="520" class="" border="0" align="one_image" style="display:block;max-width:520px" alt="" src="https://agilecrm.s3.amazonaws.com/editor/email/null/bottom_border_png_1476857064261.png" tabindex="0" id="dcdafd24-d96d-1fce-4f2b-759af3851978" width="630" height="210">
 </td>
 </tr>
 </tbody>
