--- a/agile-frontend/WebContent/misc/emailbuilder/templates/layout1/body_index.html
+++ b/agile-frontend/WebContent/misc/emailbuilder/templates/layout1/body_index.html
@@ -23,7 +23,7 @@
 <tr>
 <td class="gap" width="30" style="padding: 15px 20px 10px 0px;"></td>
 <td width="" style="padding: 15px 20px 10px 0px;">
-<img border="0" align="left" src="https://s3.amazonaws.com/AgileEmailTemplates/responsive/elena/img/logo.png" style="display: block;margin: 0px;max-width: 340px" id="6583acda-fd99-fd4b-9dfe-9cd34021bf53" width="110px" height="44px">
+<img border="0" align="left" data-maxwidth="340" src="https://s3.amazonaws.com/AgileEmailTemplates/responsive/elena/img/logo.png" style="display: block;margin: 0px;max-width: 340px" id="6583acda-fd99-fd4b-9dfe-9cd34021bf53" width="110px" height="44px">
 </td>
 </tr>
 </tbody>
@@ -58,7 +58,7 @@
 <tbody>
 <tr>
 <td align="center" style="padding: 15px 0px;" class="image">
-<img class="" border="0" align="one_image" style="display:block;max-width:540px" alt="" src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/template/1/product-1.png" tabindex="0" id="c72a2441-90b9-cf77-d6f2-c10f49944ab5" width="500px" height="300px">
+<img class="" border="0" data-maxwidth="520" align="one_image" style="display:block;max-width:520px" alt="" src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/template/1/product-1.png" tabindex="0" id="c72a2441-90b9-cf77-d6f2-c10f49944ab5" width="500px" height="300px">
 </td>
 </tr>
 </tbody>
@@ -105,7 +105,7 @@
 <tr>
 <td class="gap" width="30" style="padding: 15px 0px 10px;"></td>
 <td width="" style="padding: 15px 0px 10px;">
-<img border="0" align="left" src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/template/1/product-2.png" style="display: block;margin: 0px;max-width: 340px" id="7f7e4f90-b2f3-6c4d-c851-569942da6d7f" width="150px" height="200px">
+<img border="0" align="left" data-maxwidth="340" src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/template/1/product-2.png" style="display: block;margin: 0px;max-width: 340px" id="7f7e4f90-b2f3-6c4d-c851-569942da6d7f" width="150px" height="200px">
 </td>
 </tr>
 </tbody>
@@ -170,7 +170,7 @@
 <tr>
 <td class="gap" width="30" style="padding: 15px 0px 10px;"></td>
 <td width="" style="padding: 15px 0px 10px;">
-<img border="0" align="left" src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/template/1/product-4.png" style="display: block;margin: 0px;max-width: 340px" id="e2b0941d-d0d3-9569-2291-a9698aa07f5b" width="150px" height="200px">
+<img border="0" align="left" data-maxwidth="340" src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/template/1/product-4.png" style="display: block;margin: 0px;max-width: 340px" id="e2b0941d-d0d3-9569-2291-a9698aa07f5b" width="150px" height="200px">
 </td>
 </tr>
 </tbody>
