--- a/agile-frontend/WebContent/misc/emailbuilder/templates/layout2/body_index.html
+++ b/agile-frontend/WebContent/misc/emailbuilder/templates/layout2/body_index.html
@@ -125,7 +125,7 @@
 </tr>
 <tr>
 <td align="center" class="image-caption-content image imageInColumn" >
-<img src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/template/2/news-1.jpg" alt="" style="display: block; border: none;" height="130px" align="2" border="0" width="200px" id="92f99743-b3a2-0e07-0804-a7fdb086e894" class="">
+<img data-maxwidth="340" src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/template/2/news-1.jpg" alt="" style="display: block; border: none;max-width: 340px;" height="130px" align="2" border="0" width="200px" id="92f99743-b3a2-0e07-0804-a7fdb086e894" class="">
 </td>
 </tr>
 <tr>
@@ -157,7 +157,7 @@
 </tr>
 <tr>
 <td align="center" class="image-caption-content image imageInColumn" >
-<img src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/template/2/news-2.jpg" alt="" style="display: block; border: none;" height="130px" align="2" border="0" width="200px" id="468d60f2-a764-c2da-1555-894f9fd0c858" class="">
+<img data-maxwidth="340" src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/template/2/news-2.jpg" alt="" style="display: block; border: none;max-width: 340px;" height="130px" align="2" border="0" width="200px" id="468d60f2-a764-c2da-1555-894f9fd0c858" class="">
 </td>
 </tr>
 <tr>
@@ -217,7 +217,7 @@
 </tr>
 <tr>
 <td align="center" class="image-caption-content image imageInColumn">
-<img src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/template/2/news-3.jpg" alt="" style="display: block; border: none;" height="130px" align="2" border="0" width="200px" class="" id="eb45e144-5b24-bc3a-479a-8b277fa7786e">
+<img data-maxwidth="340" src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/template/2/news-3.jpg" alt="" style="display: block; border: none; max-width:340px;" height="130px" align="2" border="0" width="200px" class="" id="eb45e144-5b24-bc3a-479a-8b277fa7786e">
 </td>
 </tr>
 <tr>
@@ -249,7 +249,7 @@
 </tr>
 <tr>
 <td align="center" class="image-caption-content image imageInColumn">
-<img src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/template/2/news-4.jpg" alt="" style="display: block; border: none;" height="130px" align="2" border="0" width="200px" class="" id="f9991fad-4633-bf0a-4e69-2d4883506a70">
+<img data-maxwidth="340" src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/template/2/news-4.jpg" alt="" style="display: block; border: none; max-width:340px;" height="130px" align="2" border="0" width="200px" class="" id="f9991fad-4633-bf0a-4e69-2d4883506a70">
 </td>
 </tr>
 <tr>
@@ -324,7 +324,7 @@
 <tr>
 <td class="gap" width="30" style="padding: 15px 50px 10px 0px;"></td>
 <td width="" style="padding: 15px 50px 10px 0px;">
-<img border="0" align="left" src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/template/2/calendar.png" style="display: block;margin: 0px;max-width: 340px" id="3b7af279-565a-f961-c56f-744d3d67ac41" width="105px" height="105px">
+<img data-maxwidth="340" border="0" align="left" src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/template/2/calendar.png" style="display: block;margin: 0px;max-width: 340px" id="3b7af279-565a-f961-c56f-744d3d67ac41" width="105px" height="105px">
 </td>
 </tr>
 </tbody>
@@ -396,7 +396,7 @@
 <tr>
 <td class="gap" width="30" style="padding: 15px 50px 10px 0px;"></td>
 <td width="" style="padding: 15px 50px 10px 0px;">
-<img border="0" align="left" src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/template/2/calendar.png" style="display: block;margin: 0px;max-width: 340px" id="c66d420b-9951-18f9-fb2c-fbc6982df69a" width="105px" height="105px">
+<img data-maxwidth="340" border="0" align="left" src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/template/2/calendar.png" style="display: block;margin: 0px;max-width: 340px" id="c66d420b-9951-18f9-fb2c-fbc6982df69a" width="105px" height="105px">
 </td>
 </tr>
 </tbody>
@@ -468,7 +468,7 @@
 <tr>
 <td class="gap" width="30" style="padding: 15px 50px 10px 0px;"></td>
 <td width="" style="padding: 15px 50px 10px 0px;">
-<img border="0" align="left" src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/template/2/calendar.png" style="display: block;margin: 0px;max-width: 340px" id="3c0985b6-48b8-b3d9-b13f-948c4ceb77d8" width="105px" height="105px">
+<img data-maxwidth="340" border="0" align="left" src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/template/2/calendar.png" style="display: block;margin: 0px;max-width: 340px" id="3c0985b6-48b8-b3d9-b13f-948c4ceb77d8" width="105px" height="105px">
 </td>
 </tr>
 </tbody>
