--- a/agile-frontend/WebContent/misc/emailbuilder/templates/layout6/body_index.html
+++ b/agile-frontend/WebContent/misc/emailbuilder/templates/layout6/body_index.html
@@ -23,7 +23,7 @@
 <tr>
 <td class="gap" width="30" style="padding: 10px 0px 10px 10px;"></td>
 <td width="" style="padding: 10px 0px 10px 10px;">
-<img border="0" align="left" src="https://s3.amazonaws.com/AgileEmailTemplates/responsive/lancer/layout1/blue/img/logo.png" style="display: block;margin: 0px;max-width: 340px" id="20011e05-4cf4-d11a-0a57-74e9f4f6a5dd" width="128px" height="30px">
+<img data-maxwidth="340" border="0" align="left" src="https://s3.amazonaws.com/AgileEmailTemplates/responsive/lancer/layout1/blue/img/logo.png" style="display: block;margin: 0px;max-width: 340px" id="20011e05-4cf4-d11a-0a57-74e9f4f6a5dd" width="128px" height="30px">
 </td>
 </tr>
 </tbody>
