--- a/agile-frontend/WebContent/misc/formbuilder/agile-form.css
+++ b/agile-frontend/WebContent/misc/formbuilder/agile-form.css
@@ -637,7 +637,7 @@ height:39px!important;
   border-top-color: transparent!important;
   border-bottom-color:1px solid rgba(238, 238, 238, 0.27)!important;
   background-color: transparent!important;
-  color: #FFFFFF!important;
+  color: #fff!important;
 }
 .agile-form-transparent.theme4 input:focus,.agile-form-transparent.theme4 select:focus,.agile-form-transparent.theme4 textarea:focus{
   outline:none;
@@ -647,3 +647,76 @@ height:39px!important;
   border-bottom-color: 1px solid #fff!important;
 }
 /* new transparency css end*/
+/* new transparency with black text css start */
+.agile-form-blck-transparent{
+background-color:transparent!important;
+color: #333!important
+}
+.agile-form-blck-transparent .agile-group-addon,.agile-form-blck-transparent input,.agile-form-blck-transparent select,.agile-form-blck-transparent textarea{
+ background-color: rgba(255, 255, 255, 0.07)!important;
+ border: 1px solid #9e9e9e!important;
+ color: #333!important;
+ 
+}
+.agile-form-blck-transparent input:focus,.agile-form-blck-transparent select:focus,.agile-form-blck-transparent textarea:focus{
+  outline:none;
+  border: 1px solid #999!important;
+}
+.agile-form-blck-transparent select[multiple]:focus{
+  background-color: rgba(255, 255, 255, 0.07);
+  color: #333!important;
+}
+.agile-form-blck-transparent select:not([multiple]) option{
+background-color: #cfdadd!important
+}
+.agile-form-blck-transparent ::-webkit-input-placeholder{
+  color:#333!important;
+}
+.agile-form-blck-transparent ::-moz-placeholder{
+color:#333!important;
+}
+.agile-form-blck-transparent :-moz-placeholder{
+color:#333!important;
+}
+.agile-form-blck-transparent :-ms-input-placeholder{
+color:#333!important;
+}
+.agile-form-blck-transparent label.i-checks,.agile-form-blck-transparent .agile-group label{
+  color:#333!important;
+}
+.agile-form-blck-transparent.theme4 .agile-field>input{
+height:39px!important;
+}
+.agile-form-blck-transparent.theme1 ::-webkit-input-placeholder,.agile-form-blck-transparent.theme2 ::-webkit-input-placeholder,.agile-form-blck-transparent.theme3 ::-webkit-input-placeholder,.agile-form-blck-transparent.theme4 ::-webkit-input-placeholder{color:#333!important;}
+.agile-form-blck-transparent.theme1 ::-moz-placeholder,.agile-form-blck-transparent.theme2 ::-moz-placeholder,.agile-form-blck-transparent.theme3 ::-moz-placeholder,.agile-form-blck-transparent.theme4 ::-moz-placeholder{color:#333!important;}
+.agile-form-blck-transparent.theme1 :-moz-placeholder,.agile-form-blck-transparent.theme2 :-moz-placeholder,.agile-form-blck-transparent.theme3 :-moz-placeholder,.agile-form-blck-transparent.theme4 :-moz-placeholder{color:#333!important;}
+.agile-form-blck-transparent.theme1 :-ms-input-placeholder,.agile-form-blck-transparent.theme2 :-ms-input-placeholder,.agile-form-blck-transparent.theme3 :-ms-input-placeholder,.agile-form-blck-transparent.theme4 :-ms-input-placeholder{color:#333!important;}
+.agile-form-blck-transparent.theme2 legend,.agile-form-blck-transparent.theme3 legend,.agile-form-blck-transparent.theme4 legend{background-color: transparent;color: #333;}
+.agile-form-blck-transparent.theme1 input:focus,.agile-form-blck-transparent.theme1 select:focus,.agile-form-blck-transparent.theme1 textarea:focus{
+  border:1px solid #999!important;
+}
+.agile-form-blck-transparent.theme2 input:focus,.agile-form-blck-transparent.theme2 select:focus,.agile-form-blck-transparent.theme2 textarea:focus{
+  border:1px solid #999!important;
+}
+.agile-form-blck-transparent.theme3 input:focus,.agile-form-blck-transparent.theme3 select:focus,.agile-form-blck-transparent.theme3 textarea:focus{
+  border:1px solid #999!important; 
+}
+.agile-form-blck-transparent.theme4 input:focus,.agile-form-blck-transparent.theme4 select:focus,.agile-form-blck-transparent.theme4 textarea:focus{
+  border:1px solid #999!important;
+}
+.agile-form-blck-transparent.theme4 input,.agile-form-blck-transparent.theme4 select,.agile-form-blck-transparent.theme4 textarea{
+  border-left-color: transparent!important;
+  border-right-color: transparent!important;
+  border-top-color: transparent!important;
+  border-bottom-color:1px solid rgba(238, 238, 238, 0.27)!important;
+  background-color: transparent!important;
+  color: #333!important;
+}
+.agile-form-blck-transparent.theme4 input:focus,.agile-form-blck-transparent.theme4 select:focus,.agile-form-blck-transparent.theme4 textarea:focus{
+  outline:none;
+  border-left-color: transparent!important;
+  border-right-color: transparent!important;
+  border-top-color: transparent!important;
+  border-bottom-color: 1px solid #999!important;
+}
+/* new transparency with black text css end */
