--- a/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
+++ b/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
@@ -3193,7 +3193,7 @@ div.show-caret:hover>a.caret-btn
 #custom-fields-accordion .collapse.in{
       box-shadow: 0 10px 30px 0px rgba(0, 0, 0, 0.07) !important;
 }
-#custom-fields-accordion .panel-title>a{
+#custom-fields-accordion .panel-title>a, #analytics-accordion .panel-title>a,#api-analytics-accordion .panel-title>a,#-deal-track .panel-title{
       font-size: 13px !important;
       color:#78909c!important;
 }
