tags font size added

--- a/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
+++ b/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
@@ -3281,4 +3281,4 @@ width: 169px !important;
     color: #78909c !important;
     font-weight: bold;
 }
-
+.agile-theme-15 .tag-alpha{font-size: 13px;}
