--- a/agile-frontend/WebContent/flatfull/css/material-theme/css/dynamic-colors.less
+++ b/agile-frontend/WebContent/flatfull/css/material-theme/css/dynamic-colors.less
@@ -316,10 +316,14 @@
     color : @service-color;
   }
 }
-.plan-collection-in.selected-plan .btn-plan, .plan-collection-in.selected-plan .btn-plan:hover {
-  background-color: #48c5a3 !important;
-  border-color: #50c7a7 !important;
-  color: #fff !important;
+.plan-collection-in.selected-plan .btn-plan
+{
+    color: #11a0f8 !important;
+    background-color: rgba(17, 160, 248, 0.2) !important;
+}
+.plan-collection-in.selected-plan .btn-plan:hover{
+    color: #11a0f8 !important;
+    background-color: rgba(17, 160, 248, 0.2) !important;
 }
 .agile-theme-15 .agile-page-header .dropdown-toggle span , .agile-theme-15 .agile-page-header .dropdown-toggle .caret
 {
