change of button colors in plan and upgrade

--- a/agile-frontend/WebContent/flatfull/css/material-theme/css/dynamic-colors.less
+++ b/agile-frontend/WebContent/flatfull/css/material-theme/css/dynamic-colors.less
@@ -318,12 +318,12 @@
 }
 .plan-collection-in.selected-plan .btn-plan
 {
-    color: #11a0f8 !important;
-    background-color: rgba(17, 160, 248, 0.2) !important;
+    color: #fff !important;
+    background-color: #11a0f8 !important;
 }
-.plan-collection-in.selected-plan .btn-plan:hover{
-    color: #11a0f8 !important;
-    background-color: rgba(17, 160, 248, 0.2) !important;
+#starter_plan .plan-collection-in.selected-plan .btn-plan:hover,#regular_plan .plan-collection-in.selected-plan .btn-plan:hover,#pro_plan .plan-collection-in.selected-plan .btn-plan:hover{
+    color: #fff !important;
+    background-color: #11a0f8 !important;
 }
 .agile-theme-15 .agile-page-header .dropdown-toggle span , .agile-theme-15 .agile-page-header .dropdown-toggle .caret
 {
