--- a/agile-frontend/WebContent/misc/formbuilder/agile-form.css
+++ b/agile-frontend/WebContent/misc/formbuilder/agile-form.css
@@ -719,4 +719,10 @@ height:39px!important;
   border-top-color: transparent!important;
   border-bottom-color: 1px solid #999!important;
 }
+.agile-form-blck-transparent .agile-input-group input[type=text]:first-child {
+    border-right: 0 none!important;
+}
+.agile-form-blck-transparent .agile-input-group input[type=text]:last-child {
+    border-left: 0 none!important;
+}
 /* new transparency with black text css end */
