send email edtior border right line issue

--- a/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
+++ b/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
@@ -3282,3 +3282,4 @@ width: 169px !important;
     font-weight: bold;
 }
 .agile-theme-15 .tag-alpha{font-size: 13px;}
+.send-email-edtior .panel{border: 1px solid #f4f8f9 !important;}
