--- a/agile-frontend/WebContent/misc/formbuilder/agile-form.css
+++ b/agile-frontend/WebContent/misc/formbuilder/agile-form.css
@@ -580,6 +580,9 @@ margin-left: 35px;
 background-color:transparent!important;
 color: #fff!important
 }
+.agile-form-transparent legend,.agile-form-transparent button{
+color: #fff!important
+}
 .agile-form-transparent .agile-group-addon,.agile-form-transparent input,.agile-form-transparent select,.agile-form-transparent textarea{
  background-color: rgba(255, 255, 255, 0.07)!important;
  border: 1px solid rgba(238, 238, 238, 0.27)!important;
@@ -653,6 +656,9 @@ height:39px!important;
 /* new transparency with black text css start */
 .agile-form-blck-transparent{
 background-color:transparent!important;
+color: #333!important
+}
+.agile-form-blck-transparent legend,.agile-form-blck-transparent button{
 color: #333!important
 }
 .agile-form-blck-transparent .agile-group-addon,.agile-form-blck-transparent input,.agile-form-blck-transparent select,.agile-form-blck-transparent textarea{
