added image caption block

--- a/agile-frontend/WebContent/misc/emailbuilder/css/template.editor.css
+++ b/agile-frontend/WebContent/misc/emailbuilder/css/template.editor.css
@@ -473,7 +473,7 @@ div.view {
     border-radius: .25em;
 }
 
-#browseBtn{
+.browseBtn{
     border-radius: 0 4px 4px 0;
     background-color: #eee;
 }
